fix the z-index issue in photography page

--- a/photography/photography.css
+++ b/photography/photography.css
@@ -241,7 +241,7 @@ a
     min-height: 100svh;
     width: 40%;
     position: fixed;
-    z-index: 1000;
+    z-index: 1500;
     
 }
 
@@ -252,7 +252,7 @@ a
     min-height: 100svh;
     width: 40%;
     position: fixed;
-    z-index: 1000;
+    z-index: 1500;
 }
 
 .photography .main-title,
@@ -502,6 +502,12 @@ gallery section begins */
     {
         max-width: 80vw;
         max-height: 60vh;
+    }
+
+    .photography .descr-section-title,
+    .smiles .descr-section-title
+    {
+        z-index: 1000;
     }
 
 }
